# tejory-app

./: .gitignore  .gitmodules  README.md  build.yaml  pubspec.yaml  test.json
android/: .gitignore  build.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  build_xcframework.sh  compile_secp256k1_ios.sh  crypto_wrapper.cpp
android/app/src/main/cpp/openssl_builder/: CMakeLists.txt
assets/: coindata.json  json copy.json  lpdata.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/secp256k1.xcframework/: Info.plist
lib/: benchmark.dart  box_models.g.dart  custom_icons_icons.dart  isar_models.dart  main.dart  objectbox-model.json  objectbox.g.dart  singleton.dart
lib/apdu/: channel.dart  channelWrapper.dart
lib/api_keys/: api_keys.dart
lib/bip32/: derivation_bip32_key.dart
lib/coindesk/: api.dart
lib/coins/: asset_isolate.dart  bitcoin.dart  bitcoin_block.dart  bitcoin_tx.dart  bitcoin_tx_in.dart  bitcoin_tx_out.dart  btc_helper.dart  btc_isolate.dart  btcln.dart  const.dart  crypto_coin.dart  erc-20.dart  ether.dart  ether_tx.dart  historic_price_service.dart  psbt.dart  pst.dart  tx.dart  visual_tx.dart  wallet.dart
lib/collections/: balance.dart  balance.g.dart  block.dart  block.g.dart  coin.dart  coin.g.dart  data_version.dart  data_version.g.dart  key.dart  key.g.dart  lp.dart  lp.g.dart  next_key.dart  next_key.g.dart  tx.dart  tx.g.dart  walletDB.dart  walletDB.g.dart  wallet_db.dart  wallet_db.g.dart
lib/comms/: medium.dart  nfc.dart
test/: other_helpers_test.dartbak
(+135 files in other folders)
